# slicer

./: Cargo.toml  LICENSE  README.md  flake.nix
nix/: package.nix
src/: desktop.rs  lookup.rs  main.rs  systemd.rs
