[package]
name = "slicer"
description = "A utility to launch apps as systemd units"
version = "0.1.0"
edition = "2024"
authors = ["Ivan Leshchenko <ivan@ivan770.me>"]
license = "MIT"

[dependencies]
anyhow = "1.0.98"
argh = { version = "0.1.13", default-features = false, features = ["help"] }
ascii = "1.1.0"
camino = "1.1.9"
fastrand = "2.3.0"
freedesktop_entry_parser = "1.3.0"
futures-util = "0.3.31"
itoa = "1.0.15"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["rt", "macros", "fs"] }
tokio-stream = { version = "0.1.17", default-features = false, features = ["fs"] }

# DBus
systemd-zbus = { version = "5.3.2", default-features = false }
zbus = { version = "5.7.1", default-features = false, features = ["tokio"] }
